Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Django Users Boilerplate</h1>
-      <h2 class="project-tagline">A Django boilerplate with User Registeration, Login and Password change views.     This boilerplate can be used to create Django projects with user management. Uses Django Auth for the Authentication Views.</h2>
+      <h2 class="project-tagline">A Django boilerplate with User Registeration, Login and Password change views.     This boilerplate can be used to create Django projects with user management. Uses Django Auth for the User Authentications. </h2>
       <a href="https://github.com/vigzmv/Django-Users-Boilerplate" class="btn">View on GitHub</a>
       <a href="https://github.com/vigzmv/Django-Users-Boilerplate/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/vigzmv/Django-Users-Boilerplate/tarball/master" class="btn">Download .tar.gz</a>
@@ -26,7 +26,7 @@
 <a id="a-django-boilerplate-with-user-registeration-login-and-password-change-views" class="anchor" href="#a-django-boilerplate-with-user-registeration-login-and-password-change-views" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Django boilerplate with User Registeration, Login and Password change views.</h3>
 
 <p>This boilerplate can be used to create Django projects with user management quicker.
-Uses Django Auth for the Authentication Views.</p>
+Uses Django Auth for the User Authentications. </p>
 
 <p>Made by <a href="https://github.com/vigzmv">vigzmv</a></p>
 
