Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <h1>
 <a id="django-users-boilerplate" class="anchor" href="#django-users-boilerplate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Django Users Boilerplate</h1>
 
+<p><a href="https://github.com/vigzmv/Django-Users-boilerplate"><img src="https://badges.frapsoft.com/os/v2/open-source.svg?v=102" alt="Open Source Love"></a>    
+<a href="https://github.com/vigzmv/Django-Users-boilerplate"><img src="https://img.shields.io/github/license/mashape/apistatus.svg" alt="license"></a>    
+<a href="https://github.com/vigzmv/Django-Users-boilerplate"><img src="https://img.shields.io/badge/contributions-welcome-brightgreen.svg?style=flat" alt="contributions welcome"></a></p>
+
 <h3>
 <a id="a-django-boilerplate-with-user-registeration-login-and-password-change-views" class="anchor" href="#a-django-boilerplate-with-user-registeration-login-and-password-change-views" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Django boilerplate with User Registeration, Login and Password change views.</h3>
 
